--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,42 @@
-absl-py==0.15.0
+absl-py==2.1.0
 astunparse==1.6.3
-certifi==2021.10.8
-charset-normalizer==2.0.11
-click==8.0.3
-Flask==2.1.1
-flatbuffers==2.0
-gast==0.4.0
+blinker==1.7.0
+certifi==2024.2.2
+charset-normalizer==3.3.2
+click==8.1.7
+dm-tree==0.1.8
+Flask==3.0.2
+flatbuffers==24.3.7
+gast==0.5.4
 google-pasta==0.2.0
-grpcio==1.41.0
-h5py==3.1.0
-idna==3.3
-itsdangerous==2.1.0
-Jinja2==3.0.3
-keras==2.6.0
-Markdown==3.3.4
-MarkupSafe==2.1.0
-numpy==1.19.5
-protobuf==3.19.4
-requests==2.26.0
+grpcio==1.62.1
+h5py==3.10.0
+idna==3.6
+itsdangerous==2.1.2
+Jinja2==3.1.3
+keras==3.0.5
+libclang==16.0.6
+Markdown==3.6
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+mdurl==0.1.2
+ml-dtypes==0.3.2
+namex==0.0.7
+numpy==1.26.4
+opt-einsum==3.3.0
+packaging==24.0
+protobuf==4.25.3
+Pygments==2.17.2
+requests==2.31.0
+rich==13.7.1
+setuptools==69.1.1
 six==1.16.0
-tensorboard==2.7.0
-tensorboard-data-server==0.6.1
-tensorflow==2.7.0
-typing-extensions==3.10.0.2
-urllib3==1.26.7
-Werkzeug==2.0.3
-wrapt==1.12.1
+tensorboard==2.16.2
+tensorboard-data-server==0.7.2
+tensorflow==2.16.1
+termcolor==2.4.0
+typing_extensions==4.10.0
+urllib3==2.2.1
+Werkzeug==3.0.1
+wheel==0.41.2
+wrapt==1.16.0
