--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ h5py==3.10.0
 idna==3.6
 itsdangerous==2.1.2
 Jinja2==3.1.3
+joblib==1.3.2
 keras==3.0.5
 libclang==16.0.6
 Markdown==3.6
@@ -29,12 +30,15 @@ protobuf==4.25.3
 Pygments==2.17.2
 requests==2.31.0
 rich==13.7.1
+scikit-learn==1.4.1.post1
+scipy==1.12.0
 setuptools==69.1.1
 six==1.16.0
 tensorboard==2.16.2
 tensorboard-data-server==0.7.2
 tensorflow==2.16.1
 termcolor==2.4.0
+threadpoolctl==3.3.0
 typing_extensions==4.10.0
 urllib3==2.2.1
 Werkzeug==3.0.1
