--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,20 @@
 absl-py==2.1.0
+annotated-types==0.6.0
+anyio==4.3.0
 astunparse==1.6.3
 blinker==1.7.0
 certifi==2024.2.2
 charset-normalizer==3.3.2
 click==8.1.7
 dm-tree==0.1.8
+fastapi==0.110.0
 Flask==3.0.2
 flatbuffers==24.3.7
 gast==0.5.4
 google-pasta==0.2.0
 grpcio==1.62.1
 gunicorn==21.2.0
+h11==0.14.0
 h5py==3.10.0
 idna==3.6
 itsdangerous==2.1.2
@@ -27,14 +31,20 @@ namex==0.0.7
 numpy==1.26.4
 opt-einsum==3.3.0
 packaging==24.0
+pillow==10.2.0
 protobuf==4.25.3
+pydantic==2.6.4
+pydantic_core==2.16.3
 Pygments==2.17.2
+python-multipart==0.0.9
 requests==2.31.0
 rich==13.7.1
 scikit-learn==1.4.1.post1
 scipy==1.12.0
 setuptools==69.1.1
 six==1.16.0
+sniffio==1.3.1
+starlette==0.36.3
 tensorboard==2.16.2
 tensorboard-data-server==0.7.2
 tensorflow==2.16.1
@@ -42,6 +52,7 @@ termcolor==2.4.0
 threadpoolctl==3.3.0
 typing_extensions==4.10.0
 urllib3==2.2.1
+uvicorn==0.28.0
 Werkzeug==3.0.1
 wheel==0.41.2
 wrapt==1.16.0
